--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,12 @@ dev = [
     "pre-commit>=4.5.0",
     "pytest>=9.0.2",
 ]
+
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+addopts = "-v --import-mode=append"
+pythonpath = [".","tasks", "tasks/task_2","examples"]
